Fixed spacing for scroll button

--- a/css/styles.css
+++ b/css/styles.css
@@ -292,6 +292,18 @@ img {
   margin-bottom: var(--mb-0-75)
 }
 
+.home__description {
+  margin-bottom: var(--mb-2);
+}
+
+.home__scroll {
+  /* display: none; */
+}
+
+.home__scroll-button {
+  color: var(--first-color);
+  transition: .3s;
+}
 
 /*==================== BUTTONS ====================*/
 
